--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=to_do_app
+spring.datasource.url=jdbc:mysql://localhost/todo_db
+spring.datasource.username=cursist
+spring.datasource.password=cursist
